--- a/roles/image_builder/tasks/main.yml
+++ b/roles/image_builder/tasks/main.yml
@@ -18,7 +18,7 @@
   command: packer validate /root/image_builder/template.json
 
 #This task execute the json file/the packer template
-#Please verify that you docker daemon is a and you logged in
+#Please verify that you docker daemon is ON and you logged in
 #Please verify your Docker tag and version to match with you account
 #Please verify that you are connected to you cloud provider
 #Please verify that your credentials are settled correctly
