edit the packer role and update the packer version

--- a/roles/packer/vars/main.yml
+++ b/roles/packer/vars/main.yml
@@ -1,3 +1,4 @@
-packer_version: 1.4.2
-packer_url: https://releases.hashicorp.com/packer/"{{ packer_version }}"/packer_"{{ packer_version }}"_linux_amd64.zip
-packer_repo_path: /usr/local/bin
+packer_version: 1.5.6
+packer_download_url: 'https://releases.hashicorp.com/packer/{{ packer_version }}/packer_{{ packer_version }}_linux_amd64.zip'
+packer_zip_path: '/tmp/packer_{{ packer_version }}_linux_amd64.zip'
+packer_path: /usr/local/bin
