--- a/roles/packer/tasks/main.yml
+++ b/roles/packer/tasks/main.yml
@@ -1,35 +1,11 @@
-
 ---
-#UBUNTU
-- name: install git/gitflow/wget/unzip/vim
-  apt:
-   name: "{{ item }}"
-  with_items:
-   - git
-   - vim
-   - wget
-   - unzip
-  when: ansible_distribution == "Ubuntu"
-
-#CENTOS
-- name: install  git/gitflow/wget/unzip/vim
-  yum:
-   name: "{{ item }}"
-  with_items:
-   - git
-   - vim
-   - wget
-   - unzip
-  when: ansible_distribution == "CentOS"
-
 - name: Download packer
-  command: wget "{{ packer_url }}"
+  get_url:
+    url: "{{ packer_download_url }}"
+    dest: /tmp
+    mode: '0644'
 
-- name: unzip packer
-  command: unzip packer_"{{ packer_version }}"_linux_amd64.zip
-
-- name: move packer
-  command: mv packer "{{ packer_repo_path }}"
-
-- name: remove zip file
-  command: rm -f packer_"{{ packer_version }}"_linux_amd64.zip
+- name: Extract packer and mv to {{ packer_path }}
+  unarchive:
+    src: "{{ packer_zip_path }}"
+    dest: "{{ packer_path }}"
